# frank_scanlation_mobile_build

./: Cargo.toml  README.md
.github/workflows/: aur-publish.yml  ci.yml  release.yml
core/examples/: probe.rs
core/src/: fetch.rs  lib.rs  mangadex.rs
desktop/: package.json  svelte.config.js  vite.config.js
desktop/src/: app.css  app.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/injected/: reader.css  reader.js
desktop/src-tauri/injected/tests/: reader.test.mjs
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/lib/: MangaCard.svelte  format.test.ts  format.ts  ipc.ts  mobile-guards.test.ts  platform.test.ts  platform.ts  types.ts
desktop/src/routes/: +layout.svelte  +layout.ts  +page.svelte
mobile-build/: Dockerfile  build.sh
releases/: v0.2.0.md  v0.2.1.md
