[workspace]
resolver = "2"
members = ["core", "desktop/src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["akitaonrails"]
license = "MIT"

[workspace.dependencies]
scanlation-core = { path = "core" }
rusqlite = { version = "0.32", features = ["bundled"] }
scraper = "0.21"
url = "2"
regex = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "gzip", "brotli"], default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "time"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
