[package]
name = "scanlation-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "FRANK Scanlation — desktop reader for ad-hoc scanlation websites"

[lib]
name = "scanlation_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
scanlation-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
